@@ -5,8 +5,16 @@ This version includes the following enhancements.
 Bugfixes:
 - Fixing minor memory leaks
 - LayerManagerCommands: fixed array handling, memory leak removed
+- X11WindowSystem: fixed resize handling
 - X11EglImage: fixing a issue which causes memory leak in XServer
 - dbusIpcModule: DBUS Interspection result corrected
+
+Improvements:
+- Improved watchdog plug-in monitoring, to detect possible
+  deadlock in plug-ins and mainthread  
+- adding new interface ilm_setSynchronizedSurfaces, ilm_removeSynchronizedSurfaces
+  to establish synchronized composition on dedicated surfaces this avoids e.g.
+  flickering during night/day switch.
 
 Version 1.0
 ------------------
